@@ -1,6 +1,6 @@
 {
   "name": "simp-selinux",
-  "version": "2.5.1",
+  "version": "2.6.0",
   "author": "SIMP Team",
   "summary": "manages the SELinux system state",
   "license": "Apache-2.0",
@@ -26,6 +26,14 @@
       "version_requirement": ">= 3.0.0 < 4.0.0"
     }
   ],
+  "simp": {
+    "optional_dependencies": [
+      {
+        "name": "camptocamp/systemd",
+        "version_requirement": ">= 2.2.0 < 3.0.0"
+      }
+    ]
+  },
   "operatingsystem_support": [
     {
       "operatingsystem": "CentOS",
